<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/texture"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>


    <com.getbouncer.cardscan.base.Overlay
        android:id="@+id/shadedBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/texture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/texture" />

    <Button
        android:id="@+id/closeButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/ic_close"
        android:contentDescription="@string/card_scan_close_button"
        app:layout_constraintBottom_toBottomOf="@+id/flashlightButton"
        app:layout_constraintEnd_toStartOf="@+id/flashlightButton"
        app:layout_constraintStart_toStartOf="@+id/texture"
        app:layout_constraintTop_toTopOf="@+id/flashlightButton" />

    <View
        android:id="@+id/cardRectangle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/card_scan_card_rectangle"
        app:layout_constraintBottom_toBottomOf="@+id/texture"
        app:layout_constraintDimensionRatio="H,8:5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/texture" />


    <TextView
        android:id="@+id/scanCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/card_scan_scan_card"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/texture" />

    <TextView
        android:id="@+id/positionCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/card_scan_position_card"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardRectangle" />

    <Button
        android:id="@+id/flashlightButton"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:background="@drawable/ic_flash_light_bg"
        android:contentDescription="@string/card_scan_flashlight_button"
        app:layout_constraintBottom_toBottomOf="@+id/texture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/closeButton"
        app:layout_constraintTop_toBottomOf="@+id/positionCard" />

    <ImageView
        android:id="@+id/debugImageView"
        android:layout_width="120dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/an_image_used_only_for_debugging_and_testing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/cardNumber"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/_4242_4242_4242_4242"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/cardRectangle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardRectangle"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/expiry"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/_5_18"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/cardRectangle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardRectangle"
        app:layout_constraintTop_toBottomOf="@+id/cardNumber" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/put_card_inside"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scanCard" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/text_bg"
        android:paddingHorizontal="16dp"
        android:text="@string/put_card_inside"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/cardRectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
